test: Add some test